# python-project-49

./: .gitignore  Makefile  README.md  brain-calc  brain-even  brain-games  brain-gcd  brain-prime  brain-progression  pyproject.toml
brain_games/: game_starter.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_utils.py  cli.py  even_utils.py
brain_games/utils/: calc_util.py  even_utils.py  gcd_utils.py  prime_utils.py  progression_utils.py
