[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first hexlet project"
authors = ["Gregtmj <greg_1461996@hotmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
