[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first hexlet project"
authors = ["Gregtmj <greg_1461996@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/GregTMJ/python-project-49"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"
jsonschema = "^4.16.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
